change font family

--- a/src/AwesomeBooks.Web/Views/Shared/_Layout.cshtml
+++ b/src/AwesomeBooks.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Awesome Books</title>
     <link type="text/css" rel="stylesheet" href="~/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="~/site.css" />
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <base href="~/" />
 </head>
 <body>
