--- a/src/AwesomeBooks.Web/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/src/AwesomeBooks.Web/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -10,6 +10,7 @@ li.link-active a:focus {
     color: white;
 }
 
+
 /* Keep the nav menu independent of scrolling and on top of other items */
 .main-nav {
     position: fixed;
@@ -18,6 +19,10 @@ li.link-active a:focus {
     right: 0;
     z-index: 1;
 }
+
+  .main-nav .navbar-inverse {
+    background-color: #233646;
+  }
 
 @media (min-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
