--- a/src/AwesomeBooks.Web/Views/Shared/_Layout.cshtml
+++ b/src/AwesomeBooks.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <base href="~/" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-bg navbar-static-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 @*<img src="" width="30" height="30" class="d-inline-block align-top" alt="">*@
